creando las vistas

--- a/ioteca_web/index.html
+++ b/ioteca_web/index.html
@@ -46,6 +46,16 @@
     <script src="ioteca_web_apps/auths/config.js"></script>
     <script src="ioteca_web_apps/auths/controllers/menu.js"></script>
     <script src="ioteca_web_apps/auths/controllers/permission.js"></script>
+
+    <!--Scripts de Financiero -->
+    <script src="ioteca_web_apps/financiero/services/api.js"></script>
+    <script src="ioteca_web_apps/financiero/router.js"></script>
+    <script src="ioteca_web_apps/financiero/controllers/agencia.js"></script>
+    <script src="ioteca_web_apps/financiero/controllers/persona.js"></script>
+    <script src="ioteca_web_apps/financiero/controllers/socio.js"></script>
+    <script src="ioteca_web_apps/financiero/controllers/empleado.js"></script>
+    <script src="ioteca_web_apps/financiero/controllers/ahorro.js"></script>
+    <script src="ioteca_web_apps/financiero/controllers/prestamo.js"></script>
 </body>
 
 </html>
